--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="description">
   <div class="how-its-made container">
     <div>
       <p class="subtitle">tradition and love</p>
@@ -45,7 +45,12 @@
               Aliquam erat volutpat. Aenean accumsan.
             </li>
           </ul>
-          <button type="button" class="button">Read more</button>
+          <button type="button" class="btn appeal-two">
+            Read more
+            <svg class="btn-icon" height="8" width="8">
+              <use href="./images/icon/sprite.svg#icon-button-sign"></use>
+            </svg>
+          </button>
         </div>
       </div>
       <ul class="fact-list">
@@ -71,9 +76,9 @@
     </div>
   </div>
 </section>
-<section class="img-set">
-  <div class="container">
-    <picture>
+<section>
+  <div class="img-set container">
+    <picture class="galery">
       <source
         srcset="
           ./images/how-its-made/desktop-img-set.jpg    1x,
