--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,43 +1,51 @@
-section {
-  margin-left: auto;
-  margin-right: auto;
-}
-@media screen and (min-width: 768px) {
-  section {
-    max-width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  section {
-    max-width: 1280px;
-  }
-}
-
-.how-its-made {
-  padding: 125px 20px 97px 20px;
-  background-color: #fff5f6;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url('../images/how-its-made/mob-milk-background.png');
-}
-@media screen and (min-width: 768px) {
-  .how-its-made {
-    padding: 130px 36px 140px 36px;
-    background-image: none;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .how-its-made {
-    padding: 125px 115px;
-    background-repeat: no-repeat;
-    background-position: 0 30%;
-    background-image: url('../images/how-its-made/desktop-milk-background.png');
-  }
+* {
+  outline: 1px solid tomato;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+.description {
+  background-color: #fff5f6;
+}
+
+.how-its-made {
+  padding: 125px 20px 97px 20px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('../images/how-its-made/mob-milk-background.png');
+}
+@media screen and (min-width: 380px) {
+  .how-its-made {
+    background-image: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .how-its-made {
+    padding: 130px 36px 140px 36px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .how-its-made {
+    padding: 125px 115px 310px 115px;
+    background-repeat: no-repeat;
+    background-position: center, 30%;
+    background-image: url('../images/how-its-made/desktop-milk-background.png');
+  }
 }
 
 .subtitle {
@@ -56,7 +64,7 @@ section {
     line-height: 1.15;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .subtitle {
     font-size: 30px;
     line-height: 1.13;
@@ -79,7 +87,7 @@ section {
     font-size: 48px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .title {
     font-size: 58px;
     line-height: 1.14;
@@ -103,7 +111,7 @@ section {
     flex-wrap: nowrap;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .cow-container {
     padding-top: 55px;
   }
@@ -123,7 +131,7 @@ section {
     width: 50%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .cow-text-content {
     padding-left: 74px;
     padding-top: 55px;
@@ -139,7 +147,7 @@ section {
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .cow-text-content-list-item {
     margin-bottom: 35px;
   }
@@ -161,7 +169,7 @@ section {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .primary-text {
     font-size: 16px;
     line-height: 1.76;
@@ -184,7 +192,7 @@ section {
     letter-spacing: 0.04em;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .secondary-text {
     line-height: 1.94;
   }
@@ -211,7 +219,7 @@ section {
     margin-right: 80px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .fact {
     width: calc(100% / 3);
     margin-right: 0;
@@ -235,7 +243,7 @@ section {
     text-transform: none;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .fact-title {
     font-size: 58px;
     margin-bottom: 25px;
@@ -256,7 +264,7 @@ section {
     margin-bottom: 40px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .fact-title::before {
     margin-top: 40px;
   }
@@ -292,10 +300,20 @@ section {
     line-height: 1.74;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .fact-text {
     font-size: 16px;
     line-height: 1.76;
     letter-spacing: 0.02em;
   }
+}
+
+.img-set {
+  padding: 0;
+  position: relative;
+}
+
+.galery {
+  position: absolute;
+  transform: translate(0, -40%);
 }
