--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -33,20 +33,22 @@
     position: absolute;
     top: 205px;
     left: auto;
-    right: auto;
+    right: 20px;
     width: 280px;
     min-height: 488px;    
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);   
     @media screen and (min-width:768px) {
-    top: 188.5px;    
+    top: 188.5px;
+    right: 40px;    
     width: 688px; 
     min-height: 303px;
     padding: 30px 46px 26px 96px;     
     }
     @media screen and (min-width:1344px){
     top: 348px;
+    right: 15px;
     width: 1314px;
     height: 362px;
     padding: 70px 112px 62px 114px;
