--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 
 @import './variables';
 @import './modern-normalize';
-@import './fonts';
+// @import './fonts';
 @import './mixins';
 @import './visually-hidden';
 @import './placeholders';
@@ -13,7 +13,7 @@
 
 @import './container';
 @import './common';
-@import'./_placeholders';
+@import './_placeholders';
 
 @import './header';
 @import './home';
