--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,5 +1,7 @@
 <section class="programs">
-    <h2 class="programs-title">Наша программа</h2>
+    <div class="programs-title-wrapper">
+        <h2 class="programs-title">Наша программа</h2>
+    </div>
     <div class="programs-container container">
         <div class="programs-list-wrapper">
         <ul class="programs-list">
