--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -1,5 +1,5 @@
 .guarantee {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 .guarantee-title {
   padding-bottom: 30px;
@@ -82,7 +82,7 @@
 }
 @media screen and (min-width: 1344px) {
   .guarantee {
-    margin-bottom: 130px;
+    padding-bottom: 130px;
   }
   .guarantee-title {
     padding-bottom: 50px;
