--- a/src/sass/layout/_methods.scss
+++ b/src/sass/layout/_methods.scss
@@ -1,12 +1,14 @@
-.methods{
+.methods {
   padding-top: 198px;
+  padding-bottom: 50px;
 
-  @media screen and(min-width:768px){
+  @media screen and(min-width:768px) {
     padding-top: 202px;
   }
 
-  @media screen and(min-width:1344px){
+  @media screen and(min-width:1344px) {
     padding-top: 280px;
+    padding-bottom: 130px;
   }
 }
 
@@ -18,7 +20,7 @@
   letter-spacing: 0.03em;
   margin-bottom: 30px;
 
-  @media screen and(min-width:768px){
+  @media screen and(min-width:768px) {
     font-size: 26px;
   }
 
@@ -83,15 +85,15 @@
       color: var(--white-text-color);
     }
 
-    & .methods-icon{
-        fill:var(--white-text-color);
+    & .methods-icon {
+      fill: var(--white-text-color);
     }
   }
 
-  .methods-icon{
-      fill:var(--accent-color);
+  .methods-icon {
+    fill: var(--accent-color);
 
-      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   @media screen and(min-width:768px) {
     margin-top: 27px;
@@ -117,9 +119,8 @@
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and(min-width:768px) and(max-width:1344px)
-  {
-      margin-bottom: 10px;
+  @media screen and(min-width:768px) and(max-width:1344px) {
+    margin-bottom: 10px;
   }
 
   @media screen and(min-width:1344px) {
@@ -166,8 +167,7 @@
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and(min-width:768px) and(max-width:1344px)
-  {
-      margin-bottom: 10px;
+  @media screen and(min-width:768px) and(max-width:1344px) {
+    margin-bottom: 10px;
   }
 }
