выравнивает список и размер текста в секции problems

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -29,9 +29,9 @@
 }
 
 .problem-list-container {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center; 
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; 
     padding: 20px 14px 20px 30px;
     max-width: 280px;
     max-height: 488px;
@@ -47,8 +47,8 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
-    line-height: 1.2;
+    font-size: 14px;
+    line-height: 1.21;
     letter-spacing: 0.08em;
     
     color: #FF6B09;
@@ -67,7 +67,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.42;
+    line-height: 1.43;
 
     letter-spacing: 0.08em;
     
@@ -169,6 +169,9 @@
     }
     
     .problem-list-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         padding: 70px 112px 62px 114px;
         max-width: 1374px;
         max-height: 362px;
@@ -183,7 +186,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         margin-top: -32px;
         margin-left: -32px;
     }
@@ -197,7 +200,7 @@
    .problem-item {
        font-weight: 700;
        font-size: 20px;
-       line-height: 1.2;
+       line-height: 1.4;
        letter-spacing: 0.08em;
    }
 
