--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -53,7 +53,9 @@
     height: 362px;
     padding: 70px 112px 62px 114px;
     }
-}
+    @media screen and (min-width:1680px) {
+        right: auto;
+}}
 .problems-title {
     font-weight: 800;
     font-size: 20px;
