--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -12,7 +12,7 @@
     background-image: url('./../images/hero/icecream/icecream-tablet@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 171px 410px, 346px 344px;
-    background-position: left calc(50% + 40px) top 9px,
+    background-position: left calc(50% + 40px) bottom,
       left calc(50% + 46px) top 0px;
   }
 
@@ -85,7 +85,7 @@
     }
   }
 
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1199px) {
     display: none;
   }
 }
