--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,7 +32,7 @@
         media="(min-width: 320px)"
       />
 
-      <img src="/images/hero/bg-desktop.png" alt="" />
+      <img class="hero-images" src="/images/hero/bg-desktop.png" alt="" />
     </picture>
   </div>
 </section>
