--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,13 +1,13 @@
 @media screen and(min-width: 320px) and(max-width:767px) {
   .hero-container {
+    padding-top: 50px;
+    padding-bottom: 75px;
     background-image: url('../images/hero/bgline-mobile.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 90%;
   }
   .hero {
-    margin-top: 50px;
-    padding-bottom: 75px;
     .hero-title {
       font-style: normal;
       font-weight: 800;
@@ -62,21 +62,17 @@
     }
     .hero-images {
       display: flex;
-      justify-content: center;
+      width: 100%;
+      align-items: center;
       margin-top: 30px;
     }
   }
 }
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
-  screen and (min-resolution: 192dpi) and (min-width: 320px),
-  screen and (min-resolution: 2dppx) and (min-width: 320px) {
-  // .hero {
-  //   background-image: url('../images/hero/bgline-mobile@2x.png');
-  // }
-}
 
 @media screen and(min-width: 767px) and(max-width: 1344px) {
   .hero-container {
+    padding-top: 70px;
+    padding-bottom: 114px;
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -85,8 +81,6 @@
 
   .hero {
     display: flex;
-    margin-top: 70px;
-    padding-bottom: 114px;
     .hero-text-box {
       max-width: 290px;
       .hero-title {
@@ -156,6 +150,7 @@
 
 @media screen and(min-width: 1344px ) {
   .hero-container {
+    padding-top: 70px;
     padding-bottom: 106px;
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
@@ -164,7 +159,6 @@
   }
   .hero {
     display: flex;
-    padding-top: 70px;
     .hero-text-box {
       .hero-title {
         font-style: normal;
