--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -18,7 +18,7 @@
     
     background-image: url(../images/problems/campfire.png);
     background-repeat: no-repeat;
-    background-position: top 88px left calc(50% + 615px);    
+    background-position: top 88px left calc(50% + 616px);    
     background-size: 455px 472px;
     @media screen and (min-device-pixel-ratio: 2),
   screen and (-webkit-min-device-pixel-ratio: 2),
@@ -27,13 +27,12 @@
   screen and (min-resolution: 2dppx) {
     background-image: url(../images/problems/campfire@2x.png);    
     }
-}
-}
+}}
 .problems-content {
     position: absolute;
     top: 205px;
     left: auto;
-    right: 20px;
+    right: auto;
     width: 280px;
     min-height: 488px;    
     padding: 20px 14px 20px 30px;
@@ -41,20 +40,17 @@
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);   
     @media screen and (min-width:768px) {
     top: 188.5px;
-    right: 40px;    
+    right: auto;    
     width: 688px; 
     min-height: 303px;
     padding: 30px 46px 26px 96px;     
     }
     @media screen and (min-width:1344px){
     top: 348px;
-    right: 15px;
+    right: auto;
     width: 1314px;
     height: 362px;
-    padding: 70px 112px 62px 114px;
-    }
-    @media screen and (min-width:1680px) {
-        right: auto;
+    padding: 70px 112px 62px 114px;    
 }}
 .problems-title {
     font-weight: 800;
@@ -67,8 +63,7 @@
     }
     @media screen and (min-width:1344px) {
     font-size: 46px;
-    }
-}
+    }}
 .problems-title-word{
     color: var(--accent-color);
 }
@@ -83,8 +78,8 @@
     @media screen and (min-width:1344px) {
     font-size: 20px;
     line-height: 1.649;    
-    margin-bottom: 10px;}}
-    
+    margin-bottom: 10px;
+}}    
 .problems-item-text {
     font-weight: 700;
     font-size: 14px;
@@ -97,8 +92,7 @@
     @media screen and (min-width:1344px) {
     font-size: 20px;
     line-height: 1.4;    
-    }    
-}
+}}
 .problems-item {
 @media screen and (min-width:319px) and (max-width:767px){
 &:not(:last-child) {        
@@ -115,12 +109,10 @@ margin-bottom: 8px;}
 flex: 0 0 33%;
 &:nth-child(-n+3){
 margin-bottom: 32px;}   
-}   
-}
+}}
 .problems-list {
 @media screen and (min-width:768px) {
 flex-wrap: wrap;
 display: flex;
 justify-content: space-between;
 }}
-
