--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -1,13 +1,37 @@
 .program-section {
+  position: relative;
   background-color: $dark-background;
   padding-top: 38px;
   padding-bottom: 550px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 412px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    overflow: hidden;
+    position: relative;
+    padding-top: 120px;
+    padding-bottom: 363px;
+  }
+}
+
+.program-section::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1335px;
+  right: 0;
+  width: 121px;
+  height: 137px;
+
   background-image: url(../../src/images/our-program/png/program-mobile.png);
   background-repeat: no-repeat;
-  background-position: 100% 75%;
-  background-size: 121px;
+  background-size: cover;
+  opacity: 0.7;
 
   @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
     screen and (min-resolution: 192dpi) and (min-width: 320px),
@@ -16,10 +40,10 @@
   }
 
   @media screen and (min-width: 768px) {
-    padding-top: 40px;
-    padding-bottom: 412px;
+    top: 775px;
+    width: 384px;
+    height: 280px;
     background-image: url(../../src/images/our-program/png/program-tablet.png);
-    background-size: 384px;
   }
 
   @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -29,12 +53,12 @@
   }
 
   @media screen and (min-width: 1344px) {
-    position: relative;
-    padding-top: 120px;
-    padding-bottom: 363px;
-    background-image: url(../../src/images/our-program/png/program-desktop.png);
-    background-size: 500px;
-    background-position: 0% 76%;
+    left: 0;
+    top: 660px;
+    transform: translateX(-24%);
+    width: 660px;
+    height: 502px;
+    box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
   }
 
   @media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
@@ -232,8 +256,6 @@
     line-height: 1.55;
   }
 }
-
-// tablet
 
 @media screen and (min-width: 768px) and (max-width: 1343px) {
   .sub-list {
