--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,10 @@
 <header class="header">
   <div class="menu-close container">
-    <a href="#" class="logo-link">
-      <p class="logo">
-        Hell<span class="logo-svg"
-          ><svg class="logo-svg">
-            <use href="./images/sprite.svg#icon-fire"></use></svg></span
-        >EN
-      </p>
-      <p class="logo-text">
-        <span class="logo-accent">Адский</span> английский
-      </p>
+    <a href="#">
+      <svg class="mobile_logo">
+        <use href="./images/sprite.svg#logo-desktop"></use>
+      </svg>
     </a>
-    <svg class="mobile_logo">
-      <use href="./images/sprite.svg#mobile_dark-logo"></use>
-    </svg>
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-list-item">
@@ -33,18 +24,16 @@
     </svg>
   </div>
   <div class="menu-open menu-container is-hidden" data-modal>
-    <a href="#" class="menu-logo">
-      Hell<span
-        ><svg class="logo-svg">
-          <use href="./images/sprite.svg#icon-fire"></use></svg></span
-      >EN
-      <p class="logo-text">
-        <span class="logo-accent">Адский</span> английский
-      </p>
-    </a>
-    <svg class="mobile_logo">
-      <use href="./images/sprite.svg#mobile_logo"></use>
-    </svg>
+    <div class="upper-menu container">
+      <a href="#">
+        <svg class="mobile_logo">
+          <use href="./images/sprite.svg#mobile_logo"></use>
+        </svg>
+      </a>
+      <svg class="menu-close-btn" data-modal-close>
+        <use href="./images/sprite.svg#menu_closed"></use>
+      </svg>
+    </div>
     <nav class="menu-nav">
       <ul class="nav-list">
         <li class="nav-list-item">
@@ -58,8 +47,5 @@
       </ul>
     </nav>
     <a class="menu-header-button" href="#"> консультация по телефону </a>
-    <svg class="menu-close-btn" data-modal-close>
-      <use href="./images/sprite.svg#menu_closed"></use>
-    </svg>
   </div>
 </header>
