--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,3 +1,15 @@
+.header {
+  padding-top: 30px;
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+  }
+}
+
+.upper-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 @media screen and(min-width:320px) and(max-width: 767px) {
   .menu-container {
     position: relative;
@@ -10,7 +22,11 @@
     visibility: hidden;
     pointer-events: none;
   }
+
   .menu-open {
+    padding-left: 20px;
+    padding-top: 30px;
+    padding-right: 20px;
     background: rgba(17, 21, 24, 0.9);
     position: fixed;
     width: 100%;
@@ -22,14 +38,10 @@
       display: none;
     }
     .mobile_logo {
-      margin-top: 30px;
       width: 80px;
       height: 28px;
     }
     .menu-close-btn {
-      position: absolute;
-      top: 37px;
-      right: 19.5px;
       width: 14.5px;
       height: 14.5px;
     }
@@ -87,16 +99,16 @@
   .menu-close {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
     .logo-link {
       display: none;
     }
     .nav-menu-btn {
-      margin-top: 38px;
       width: 20px;
       height: 12px;
     }
     .mobile_logo {
-      margin-top: 30px;
       width: 80px;
       height: 28px;
     }
@@ -115,6 +127,9 @@
     padding-right: 40px;
   }
   .menu-open {
+    padding-top: 42px;
+    padding-right: 44px;
+    padding-left: 40px;
     background: rgba(17, 21, 24, 0.9);
     position: fixed;
     width: 100%;
@@ -127,15 +142,10 @@
       display: none;
     }
     .mobile_logo {
-      margin-top: 41px;
-      margin-right: 239px;
       width: 128px;
       height: 45px;
     }
     .menu-close-btn {
-      position: absolute;
-      top: 58px;
-      right: 43px;
       width: 14.5px;
       height: 14.5px;
     }
@@ -172,6 +182,12 @@
       display: none;
     }
   }
+  .menu-close.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .menu-close {
     .logo-link {
       display: none;
@@ -182,31 +198,27 @@
       display: none;
     }
     .mobile_logo {
-      margin-top: 41px;
-      margin-right: 239px;
       width: 128px;
       height: 45px;
     }
 
     .nav-menu-btn {
-      margin-top: 59px;
       width: 20px;
       height: 12px;
     }
     .header-button {
-      display: flex;
-      justify-content: center;
-
+      margin-left: auto;
+      margin-right: 40px;
       min-width: 260px;
-      margin-top: 41px;
-      margin-right: 41px;
+      padding-top: 16px;
+      padding-right: 5px;
+      padding-bottom: 17px;
+      padding-left: 5px;
 
       background-color: transparent;
       color: var(--accent-color);
       border: 2px var(--accent-color) solid;
-      padding: 12.5px;
 
-      font-style: normal;
       font-weight: 700;
       font-size: 13px;
       line-height: 1.2;
@@ -216,11 +228,6 @@
   }
 }
 @media screen and(min-width:1344px) {
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
   .menu-open {
     display: none;
   }
@@ -233,17 +240,14 @@
 
   .menu-close {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .mobile_logo {
-      margin-top: 45px;
-      margin-right: 144px;
       width: 128px;
       height: 45px;
     }
     .nav {
-      margin-top: 60px;
-      margin-right: 60px;
-
       font-weight: bold;
       font-size: 14px;
       line-height: 1.2;
@@ -281,14 +285,12 @@
       }
     }
     .header-button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 33px;
-      width: 336px;
       background-color: transparent;
       border: 2px var(--accent-color) solid;
-      padding: 23px;
+      padding-top: 27px;
+      padding-right: 23px;
+      padding-bottom: 26px;
+      padding-left: 24px;
 
       color: var(--accent-color);
 
