добавила id в footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="main-footer-container">
         <ul class="footer-list-button">
             <li class="footer-button-item">
