--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,6 +5,7 @@
     </a>
 
     <!-- burger-menu-btn -->
+    <!-- mobile/tablet menu-button -->
     <button
       type="button"
       class="menu-button"
@@ -12,7 +13,7 @@
       aria-controls="menu-container"
       data-menu-button
     >
-      <svg width="30" height="30" aria-label="Переключатель мобильного меню">
+      <svg width="20" height="20" aria-label="Переключатель мобильного меню">
         <use
           class="icon-cross"
           href="./images/icon/sprite.svg#icon-mobile-close"
@@ -44,31 +45,41 @@
       </ul>
     </nav>
     <div class="header-btn">
-      <button type="button">Buy now</button>
+      <button type="button" class="btn appeal-two">
+        Buy now
+        <svg class="btn-icon next-two">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>
     </div>
   </div>
-</header>
 
-<!-- mobile/tablet menu -->
+  <!-- mobile/tablet menu -->
 
-<div class="menu-container" id="menu-container" data-menu>
-  <div>
-    <button type="button" class="mob-menu-btn">Buy now</button>
+  <div class="menu-container" id="menu-container" data-menu>
+    <button type="button" class="mob-menu-btn btn appeal-two">
+      Buy now
+      <svg class="btn-icon next-two">
+        <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+      </svg>
+    </button>
+
+    <ul class="mob-menu-list">
+      <li class="mob-menu-item">
+        <a class="mob-menu-link" href="">Home</a>
+      </li>
+      <li class="mob-menu-item">
+        <a class="mob-menu-link" href="">About us</a>
+      </li>
+      <li class="mob-menu-item">
+        <a class="mob-menu-link" href="">How it’s made?</a>
+      </li>
+      <li class="mob-menu-item">
+        <a class="mob-menu-link" href="">Our products</a>
+      </li>
+      <li class="mob-menu-item">
+        <a class="mob-menu-link" href="">Contact</a>
+      </li>
+    </ul>
   </div>
-
-  <ul class="mob-menu-list">
-    <li class="mob-menu-item">
-      <a class="mob-menu-link" href="">Home</a>
-    </li>
-    <li class="mob-menu-item"><a class="mob-menu-link" href="">About us</a></li>
-    <li class="mob-menu-item">
-      <a class="mob-menu-link" href="">How it’s made?</a>
-    </li>
-    <li class="mob-menu-item">
-      <a class="mob-menu-link" href="">Our products</a>
-    </li>
-    <li class="mob-menu-item">
-      <a class="mob-menu-link" href="">Contact</a>
-    </li>
-  </ul>
-</div>
+</header>
