--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,40 +1,44 @@
 .header {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
-  line-height: 18px;
-  color: white;
+  line-height: 1.3;
+  color: var(--primary-white-color);
 
   position: absolute;
-  z-index: 1;
-  //   position: relative;
-  //   background-color: pink;
+  z-index: 2;
   background-color: transparent;
 
+  justify-content: space-between;
   top: 0;
   width: 100%;
-  max-width: 1280px;
+  // max-width: 480px;
   padding: 6px 20px 0 20px;
 
   @media screen and (min-width: 768px) {
+    width: 100%;
+    max-width: 768px;
     padding: 37px 34px 0 34px;
   }
 
   @media screen and (min-width: 1280px) {
+    max-width: 1280px;
     padding: 37px 115px 0 115px;
+    font-size: 16px;
+  }
+
+  a {
+    color: inherit; //стили временно заданы через тег
   }
 }
-a {
-  color: inherit; //стили временно заданы через тег
-}
 
-.header .header-block {
+.header-block {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .menu-button {
-  z-index: 2;
+  z-index: 5;
   top: 15px;
   right: 20px;
 
@@ -46,9 +50,13 @@ a {
   padding: 0;
   border: none;
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     top: 50px;
     right: 225px;
+
+    &.is-open {
+      transform: translate(1000%, -100%); //нормально дать позицию
+    }
   }
 }
 
@@ -56,7 +64,7 @@ a {
   z-index: 1;
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   max-width: 250px;
   width: 100%;
   height: 100vh;
@@ -128,7 +136,7 @@ a {
 
 .nav-item {
   padding-top: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   cursor: pointer;
 
   &:not(:first-child) {
@@ -146,19 +154,18 @@ a {
 }
 
 .mob-menu-item {
-  display: inline-block;
   padding-top: 13px;
   padding-bottom: 11px;
   padding-left: 21px;
-  border-top: 1px solid #e18298;
-  border-bottom: 1px solid #e18298;
+  border-top: 1px solid var(--menu-mob-border);
+  border-bottom: 1px solid var(--menu-mob-border);
 }
 
 .mob-menu-link {
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
-  color: white;
+  color: var(--primary-white-color);
 
   &:hover {
     color: var(--text-red-color);
@@ -166,5 +173,8 @@ a {
 }
 
 .mob-menu-btn {
+  margin: 0 auto;
   margin-bottom: 19px;
+  max-width: 200px;
+  justify-content: center;
 }
