--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -372,9 +372,6 @@
     position: relative;
     width: 100%;
 
-    @media screen and (min-width: 320px) {
-    }
-
     @media screen and (min-width: 768px) {
       width: 216px;
     }
@@ -384,7 +381,7 @@
   }
 
   &__item:not(:last-child) {
-    @media screen and (min-width: 320px) and (max-width: 767px) {
+    @media screen and (max-width: 767px) {
       margin-bottom: 53px;
     }
   }
