--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,3 @@
-
 <header class="page-header">
   <div class="container">
     <nav class="page-header-nav">
@@ -7,69 +6,37 @@
           <use href="./images/logo.svg" />
         </svg>
       </a>
-      <button
-      class="menu-button"
-      type="button"
-      aria-expanded="false"
-      aria-controls="menu-container"
-      data-menu-button
-      >
-      <svg
-      class="menu-button-icon"
-      width="40"
-      height="40"
-      aria-label="Переключатель мобильного меню"
-      >
-      <use
-      class="menu-button-icon-menu"
-      href="./images/symbol-defs.svg#icon-menu"> 
-    </use>
-    <use
-    class="menu-button-icon-menu-close"
-    href="./images/symbol-defs.svg#icon-close"
-    ></use>
-  </svg>
-</button>
-<div class="menu-container" id="menu-container" data-menu>
-  <ul class="page-header-nav-list">
-    <li class="page-header-item">
-      <a
-      class="page-header-nav-link "
-      href="">
-      Home
-    </a>
-  </li>
-  <li class="page-header-item">
-    <a
-    class="page-header-nav-link "
-    href=""> 
-    About us
-  </a>
-</li>
-<li class="page-header-item">
-  <a
-  class="page-header-nav-link "
-  href=""
-  >How it’s made?</a
-  >
-</li>
-<li class="page-header-item">
-  <a
-  class="page-header-nav-link "
-  href=""
-  >Our products</a
-  >
-</li>
-<li class="page-header-item">
-  <a
-  class="page-header-nav-link "
-  href=""
-  >Contacts</a
-  >
-</li>
-</ul>
+      <button class="menu-button" type="button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+        <svg class="menu-button-icon" width="40" height="40" aria-label="Переключатель мобильного меню">
+          <use class="menu-button-icon-menu" href="./images/symbol-defs.svg#icon-menu">
+          </use>
+          <use class="menu-button-icon-menu-close" href="./images/symbol-defs.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="menu-container" id="menu-container" data-menu>
+        <ul class="page-header-nav-list">
+          <li class="page-header-item">
+            <a class="page-header-nav-link " href="">
+              Home
+            </a>
+          </li>
+          <li class="page-header-item">
+            <a class="page-header-nav-link " href="#">
+              About us
+            </a>
+          </li>
+          <li class="page-header-item">
+            <a class="page-header-nav-link " href="">How it’s made?</a>
+          </li>
+          <li class="page-header-item">
+            <a class="page-header-nav-link " href="">Our products</a>
+          </li>
+          <li class="page-header-item">
+            <a class="page-header-nav-link " href="">Contacts</a>
+          </li>
+        </ul>
 
-</div>
-</nav>
-</div>
+      </div>
+    </nav>
+  </div>
 </header>
