added text-align to button

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -216,6 +216,7 @@
       padding-right: 5px;
       padding-bottom: 17px;
       padding-left: 5px;
+      text-align: center;
 
       background-color: transparent;
       color: var(--accent-color);
