--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,62 @@
+<section class="hero">
+  <div class="container">
+    <div class="hero-titul-block">
+      <h1 class="hero-titul">
+        ice cream made with <span class="hero-tityl-one">passion</span>
+      </h1>
+      <div>
+        <button class="hero-btn appeal-one">Products</button>
+        <button class="hero-btn appeal-two">How it’s made?</button>
+      </div>
+    </div>
+    <div class="hero-milk-block">
+      <picture class="hero-milk-img">
+        <source
+          srcset="
+            ./images/hero/desktop-milk.png    1x,
+            ./images/hero/desktop-milk@2x.png 2x
+          "
+          media="(min-width: 1200px)"
+        />
+        <source
+          srcset="
+            ./images/hero/tab-milk.png    1x,
+            ./images/hero/tab-milk@2x.png 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <img src="./images/hero/tab-milk.png" alt="milk" />
+      </picture>
+      <p class="hero-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
+        <button class="btn-arrow">
+          <svg>
+            <use href="./images/svg/sprite.svg#icon-right-arrow"></use>
+          </svg>
+        </button>
+      </p>
+    </div>
+    <div class="hero-network-block">
+      <p class="hero-network">16</p>
+      <span class="hero-network-text">cafes</span>
+      <p class="hero-network">23</p>
+      <span class="hero-network-text">food trucks</span>
+    </div>
 
+    <picture class="hero-girl-img">
+      <source
+        srcset="
+          ./images/hero/desktop-girl.png    1x,
+          ./images/hero/desktop-girl@2x.png 2x
+        "
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="./images/hero/tab-girl.png 1x, ./images/hero/tab-girl@2x.png 2x"
+        media="(min-width: 768px)"
+      />
+      <img src="./images/hero/tab-girl.png" alt="milk" />
+    </picture>
+  </div>
+</section>
