--- a/src/partials/production.html
+++ b/src/partials/production.html
@@ -1,42 +1,45 @@
 <section class="production">
-    <div class="container">
+    <div class="container" id="production">
         <h2 class="production-title">
             <span class="regular">Tradition and love</span> <span class="accent">how it's made?</span>
         </h2>
         
         <div class="cow-container">
-            <div class="cow">
-                <img class="cow-image"
-                    srcset="../src/images/mobile/production/cow.png 1x, ../src/images/mobile/production/cow@2x.png 2x, ../src/images/mobile/production/cow@3x.png 3x"
-                    src="../src/images/mobile/production/cow.png" alt="Cow Image">
-            </div>
            
-<div class="description-container">
-            <p class="production-description black">
-                Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
-                egestas eros. Maecenas eleifend erat at justo fringilla.
-            </p>
+            <img class="cow-image"
+                srcset="../src/images/mobile/production/cow.png 1x, ../src/images/mobile/production/cow@2x.png 2x, ../src/images/mobile/production/cow@3x.png 3x"
+                src="../src/images/mobile/production/cow.png" alt="Cow Image">
+          
+           
+            <div class="description-container">
 
-            <p class="production-description">
-                Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
-                placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-                tincidunt.
-                <br>
-                <br>
-                Aliquam erat volutpat. Aenean accumsan.
-            </p>
+                <p class="production-description black">
+                    Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
+                    egestas eros. Maecenas eleifend erat at justo fringilla.
+                </p>
+
+                <p class="production-description">
+                    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+                    placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+                    tincidunt.
+                    <br>
+                    <br>
+                    Aliquam erat volutpat. Aenean accumsan.
+                </p>
+
+                <button class="button" href="#">
+                    <span class="button-text">
+                        read more
+                    </span>
+                    <svg width="5px" height="8px">
+                        <use href="../src/images/symbol-defs.svg#icon-right"></use>
+                    </svg>
+                </button>
             
-        </div>
+            </div>
         </div>
 
-        <button class="button" href="#">
-            <span class="button-text">
-                read more
-            </span>
-            <svg width="5px" height="8px">
-                <use href="../src/images/symbol-defs.svg#icon-right"></use>
-            </svg>
-        </button>
+        
         
     
 
