--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -297,3 +297,15 @@
         margin-bottom: 10px;
     }
 }
+
+
+.locations-item-cafe:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+  }
+
+  .locations-item-food:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+  }
+
