--- a/src/partials/page-hero.html
+++ b/src/partials/page-hero.html
@@ -1,12 +1,13 @@
-<section class="page-hero">
-    <div class="container">
+<section>
+    <div class="container page-hero">
         <div class="hero-wrapper">
             <h1 class="hero-title">Комплексная подготовка к ВНО по английскому языку</h1>
-            <p class="hero-text"><span class="hero-text-grey">Просто не будет.</span><span class="hero-text-wrapper">Но ты гарантировано наберешь <span class="hero-text-accent">+25 баллов</span></span</p>
-            <div class="hero-btn-wrapper">
-                <button class="hero-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
-            </div>
-            <div class="hero-bg"></div>
+            <p class="hero-text"><span class="hero-text-grey">Просто не будет.</span><span class="hero-text-wrapper">Но
+                    ты гарантировано наберешь <span class="hero-text-accent">+25 баллов</span></span< /p>
+                    <div class="hero-btn-wrapper">
+                        <button class="hero-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
+                    </div>
+                    <div class="hero-bg"></div>
         </div>
     </div>
 </section>
