--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,4 +1,5 @@
 .page-hero{
+    max-width: 320px;
     height: 618px;
     padding-top: 110px;
     padding-bottom: 47px;
@@ -6,6 +7,14 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
+
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
+
+    @media screen and (min-width: 1344px) {
+        max-width: 1344px;
+    }
 }
 
 .hero-wrapper{
