--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -308,3 +308,9 @@
     cursor: pointer;
     transform: scale(1.25);
   }
+
+  .locations-item:hover {
+    cursor: pointer;
+    transform: scale(1.1); 
+box-shadow: 0px 1px 18px 6px $color-menu;
+  }
