Правки в секции footer

--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -80,8 +80,12 @@
 }
 
 .footer-rights {
-  width: 100%;
   background-color: var(--title-text-color);
+  @media screen and(min-width:1688px){
+    width: 100%;
+    padding-left: 183px;
+    padding-right: 183px;
+ }
 }
 
 .footer-rights-text {
