--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -1,4 +1,5 @@
 
+
 .locations {
     display: block;
     background-color: $color-footer;
@@ -312,5 +313,6 @@
   .locations-item:hover {
     cursor: pointer;
     transform: scale(1.1); 
-box-shadow: 0px 1px 18px 6px $color-menu;
+    box-shadow: 0px 1px 18px 6px $color-line-modal;
   }
+
