--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -35,18 +35,19 @@
   }
 
   & .card {
-    max-width: 220px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     padding-top: 43px;
-    padding-right: 10px;
+    padding-right: 20px;
     padding-bottom: 43px;
     padding-left: 20px;
+    max-width: 220px;
 
     font-weight: 500;
     font-size: 12px;
     line-height: 1.5;
+    letter-spacing: 0em;
     color: $primaryTextColor;
     background: $primaryWhiteColor;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
