--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
             <button class="header-button is-hidden" type="button" data-modal-open>консультация по телефону</button>
             <button class="header-menu-button" type="button" aria-expanded="false" aria-controls="header-menu-container" aria-label="Переключатель мобильного меню"
                 data-menu-button>
-                <svg class="header-icon" width="20" height="20" aria-label="Переключатель мобильного меню"> 
+                <svg class="header-icon" aria-label="Переключатель мобильного меню"> 
                     <use class="header-icon-menu" href="./images/sprite.svg#icon-menu"></use>
                     <use class="header-icon-close" href="./images/sprite.svg#icon-crossed_close"></use>
                 </svg>
