--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,11 +1,12 @@
 .header {
   padding-top: 30px;
 
-  background-color: #fff;
+  background-color: transparent;
 
   &-navigation {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     &-list {
       display: block;
@@ -86,12 +87,14 @@
   }
 
   &-menu-button {
+    display: inline-flex;
     padding: 0px;
+    margin: 0px;
+
     width: 20px;
     height: 12px;
 
     border: none;
-    color: black;
     background-color: transparent;
 
     &:hover,
@@ -103,7 +106,11 @@
   }
 
   &-icon {
-    display: inline-flex;
+    display: block;
+    width: 20px;
+    height: 12px;
+
+    fill: black;
   }
 
   &-icon-menu {
