--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -2,6 +2,7 @@
   padding: 30px 0;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu {
@@ -32,6 +33,8 @@
 
   .header {
     position: absolute;
+    left: 0;
+    right: 0;
   }
   .navigation-list {
     list-style: none;
@@ -127,9 +130,6 @@
     &.is-open {
       display: block;
     }
-  }
-  .header-navigation {
-    justify-content: space-between;
   }
 }
 @media screen and (min-width: 1344px) {
