--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,27 +19,27 @@
         <div class="nav__header">
           <ul class="site__nav list">
             <li class="site__nav-item">
-              <a href="" class="link">Программы обучения</a>
+              <a href="#program" class="link">Программы обучения</a>
             </li>
             <li class="site__nav-item">
-              <a href="" class="link">О нас</a>
+              <a href="#teacher" class="link">О нас</a>
             </li>
             <li class="site__nav-item">
-              <a href="" class="link">Варианты обучения</a>
+              <a href="#features" class="link">Варианты обучения</a>
             </li>
             <li class="site__nav-item">
-              <a href="" class="link">Контакты</a>
+              <a href="#footer" class="link">Контакты</a>
             </li>
           </ul>
         </div>
       </div>
-      <button type="button" class="btn-consultation menu">
+      <a  href="#registration" class="btn-consultation menu">
         Консультация по телефону
-      </button>
+      </a>
     </div>
-    <button type="button" class="btn-consultation">
+    <a  href="#registration" class="btn-consultation">
       Консультация по телефону
-    </button>
+    </a>
     <button
       type="button"
       class="menu-button"
