--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="section__program">
+<section class="section__program" id="program">
     <div class="container__program container">
         <h2 class="section__title">Наша программа</h2>
         <div class="line">
