--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
     <div class="container ">
         <div class="footer-container">
             <div class="footer-container-style animate__animated animate__bounce">
