--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,4 +1,4 @@
-<section class="problems__section">
+<section class="problems__section" >
 <div class="problems__img-cont">
     <picture>
         <source srcset="/images/fire/fire-min.webp 1x, /images/fire/fire@2x-min.webp 2x" type="image/webp">
@@ -35,7 +35,7 @@
         </li>
     </ul>
 
-    <div class="features">
+    <div class="features" id="features">
         <h2 class="features__title">Почему нас
             выбирают</h2>
         <ul class="features__list list">
