--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -214,6 +214,10 @@
   }
 }
 
+// .footer-social-link {
+//   @mixin transition($property);
+// }
+
 .footer-social-icon {
   width: 20px;
   height: 20px;
