Finish mobile version footer

--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -64,6 +64,7 @@
 }
 
 .hero-passion {
+  display: flex;
   font-family: Titan One;
   font-weight: 400;
   font-size: 48px;
@@ -98,7 +99,6 @@ $time-delay: 0s, 100ms, 200ms, 300ms, 400ms, 500ms, 600ms, 700ms;
 
 @each $iconName in $time-delay {
   .hero-#{$iconName} {
-    display: inline-block;
     transition: 250ms;
 
     .hero-passion:hover & {
