--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -1,392 +1,169 @@
-@media screen and (min-width: 1200px) {
-  .social-list {
-    display: inline-flex;
-  }
-
-  .social-item:not(:last-child) {
-    margin-right: 24px;
-  }
-
-  .icon-social {
+.footer__container {
+  @media screen and (min-width: $tablet) {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
-    background-color: $light-pink-color;
-  }
-
-  .social {
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
-  }
-
-  .icon-social:hover,
-  .icon-social:focus {
-    background-color: $main-red-color;
-  }
-
-  .footer__wrapper_left {
-    width: 474px;
-    height: 117px;
-    margin-left: 3%;
-    max-width: 60%;
-    float: left;
-  }
-
-  .footer__first-title {
-    width: 472px;
-    height: 34px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 34px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-
-    color: $dark-pink-color;
-  }
-
-  // .container {
-  //   margin-top: 165px;
-  // }
-
-  .footer__second-title {
-    width: 474px;
-    height: 66px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 57px;
-    line-height: 66px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    color: $main-red-color;
-  }
-
-  .social-list {
-    width: 151px;
-    height: 34px;
-    padding-left: 53%;
-  }
-
-  .footer__contact {
-    width: 319px;
-    height: 30px;
-    margin-top: 34px;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 186%;
-
-    letter-spacing: 0.02em;
-
-    color: $main-black-color;
-  }
-
-  .footer__wrapper_right {
-    width: 319px;
-    height: 117px;
-    float: right;
-    margin-right: 4%;
-    margin-bottom: 97px;
-  }
-
-  .footer__contact span {
-    color: $main-red-color;
-  }
-
-  .footer__copyright {
-    width: 1280px;
-    height: 26px;
-    margin-left: 39%;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 186%;
-
-    letter-spacing: 0.02em;
-
-    color: $main-grey-color;
-  }
-
-  .hr_line {
-    border-top: solid 1px $main-grey-color;
-    width: 1280px;
-    clear: both;
-    margin-left: -10%;
-    margin-top: 97px;
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .social-list {
-    display: inline-flex;
+.footer__wrapper_left {
+  margin-bottom: 40px;
+  width: 234px;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0;
   }
 
-  .social-item:not(:last-child) {
-    margin-right: 24px;
+  @media screen and (min-width: $desktop) {
+    width: 474px;
+    height: 117px;
   }
+}
 
-  .icon-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
-    background-color: $light-pink-color;
-  }
+.footer__first-title {
+  margin-bottom: 17px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
 
-  .social {
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
-  }
+  color: $dark-pink-color;
 
-  .icon-social:hover,
-  .icon-social:focus {
-    background-color: $main-red-color;
-  }
-
-  .footer__wrapper_left {
-    width: 340px;
-    height: 183px;
-    margin-left: 3%;
-    max-width: 60%;
-    float: left;
-  }
-
-  .footer__first-title {
+  @media screen and (min-width: $tablet) {
     width: 340px;
     height: 57px;
 
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 30px;
-    line-height: 34px;
+    line-height: 1.13;
     letter-spacing: 0.04em;
-    text-transform: uppercase;
-
-    color: $dark-pink-color;
   }
 
-  .container {
-    margin-top: 165px;
+  @media screen and (min-width: $desktop) {
+    width: 472px;
+    height: 34px;
   }
+}
 
-  .footer__second-title {
+.footer__second-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $main-red-color;
+
+  @media screen and (min-width: $tablet) {
     width: 340px;
     height: 110px;
     margin-top: 16px;
 
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 57px;
-    line-height: 66px;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    color: $main-red-color;
   }
 
-  .social-list {
-    width: 151px;
-    height: 34px;
-    padding-left: 62%;
-  }
-
-  .footer__contact {
-    width: 319px;
-    height: 30px;
-    margin-top: 50px;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 186%;
-
-    letter-spacing: 0.02em;
-
-    color: $main-black-color;
-  }
-
-  .footer__wrapper_right {
-    width: 268px;
-    height: 106px;
-    float: right;
-    margin-right: 9%;
-    margin-bottom: 168px;
-  }
-
-  .footer__contact span {
-    color: $main-red-color;
-  }
-
-  .footer__copyright {
-    width: 276px;
-    height: 26px;
-    margin-left: 32%;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 186%;
-
-    letter-spacing: 0.02em;
-
-    color: $main-grey-color;
-  }
-
-  .hr_line {
-    border-top: solid 1px $main-grey-color;
-    width: 768px;
-    clear: both;
-    margin-left: -10%;
+  @media screen and (min-width: $desktop) {
+    width: 474px;
+    height: 66px;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .social-list {
-    display: inline-flex;
+.footer__wrapper_right {
+  margin-bottom: 40px;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0;
+  }
+}
+
+.social-list {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 45px;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 30px;
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 25px;
+  }
+}
+
+.icon-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+
+  border-radius: 50%;
+  background-color: $light-pink-color;
+
+  @media screen and (min-width: $tablet) {
+    width: 34px;
+    height: 34px;
   }
 
-  .social-item:not(:last-child) {
-    margin-right: 24px;
-  }
-
-  .icon-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    background-color: $light-pink-color;
-  }
-
-  .social {
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
-  }
-
-  .icon-social:hover,
-  .icon-social:focus {
+  &:hover,
+  &:focus {
     background-color: $main-red-color;
   }
+}
 
-  .footer__wrapper_left {
-    width: 232px;
-    height: 145px;
-    margin-left: 3%;
-    max-width: 60%;
-    float: left;
+.social {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
+}
+
+.footer__contact {
+  display: flex;
+  justify-content: flex-end;
+
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.02em;
+  color: $main-black-color;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
   }
 
-  .footer__first-title {
-    width: 232px;
-    height: 42px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px;
-    text-transform: uppercase;
-
-    color: $dark-pink-color;
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
   }
 
-  .container {
-    margin-top: 113px;
-  }
-
-  .footer__second-title {
-    width: 200px;
-    height: 76px;
-    margin-top: 17px;
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 34px;
-    line-height: 39px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-  }
-
-  .social-list {
-    width: 151px;
-    height: 34px;
-    padding-left: 50%;
-  }
-
-  .footer__contact {
-    width: 232px;
-    height: 22px;
-    margin-top: 46px;
-    margin-left: 12%;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 186%;
-    /* or 22px */
-
-    text-align: right;
-
-    color: $main-black-color;
-  }
-
-  .footer__wrapper_right {
-    width: 268px;
-    height: 106px;
-    float: right;
-    margin-right: 9%;
-    margin-bottom: 43px;
-  }
-
-  .footer__contact span {
-    font-size: 10px;
+  & span {
     color: $main-red-color;
   }
+}
 
-  .footer__copyright {
-    width: 150px;
-    height: 42px;
-    margin-left: 25%;
+.footer__copyright {
+  padding-top: 25px;
+  padding-bottom: 25px;
 
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 186%;
+  border-top: 1px solid #e1e1e1;
 
-    letter-spacing: 0.02em;
-
-    color: $main-grey-color;
+  @media screen and (min-width: $tablet) {
+    width: 276px;
+    height: 26px;
+    margin-left: 32%;
   }
+}
 
-  .hr_line {
-    border-top: solid 1px $main-grey-color;
-    width: 320px;
-    clear: both;
-    margin-left: -10%;
-    margin-top: 97px;
-  }
+.footer__copyright-text {
+  display: block;
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-weight: 700;
+  line-height: 1.52;
+  letter-spacing: 0.02em;
+  text-align: center;
+
+  color: $main-grey-color;
 }
