--- a/src/sass/components/reviews/_reviews.scss
+++ b/src/sass/components/reviews/_reviews.scss
@@ -10,7 +10,7 @@
 
   @media screen and (min-width: $desktop) {
     padding-top: 280px;
-    padding-bottom: 125px;
+    padding-bottom: 225px;
   }
 }
 
@@ -88,7 +88,15 @@
 .slider {
   position: relative;
   padding-top: 20px;
-  box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.6);
+
+  border-radius: 20px;
+  box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.3);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 8px 50px rgba(212, 20, 67, 0.5);
+  }
 
   @media screen and (min-width: $tablet) {
     padding: 20px 50px 0px 50px;
