--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -5,8 +5,8 @@
       <span class="home-passion">passion</span>
     </h1>
     <ul class="home-bottons-list">
-      <li><a class="home-botton" href="#">Products</a></li>
-      <li><a class="home-botton" href="#">How it’s made?</a></li>
+      <li class="btn"><a class="home-botton" href="#products">Products</a></li>
+      <li class="btn light"><a class="home-botton" href="#production">How it’s made?</a></li>
     </ul>
   </div>
   <div class="home-circle"></div>
