--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <header class="header">
-    <div class="container">
+    <div class="header-container">
       <nav class="header-navigation">
         <a class="header-logo" href="#" id="#home">
           <img
