--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,3 +1,15 @@
+.header-container {
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 768px) {
+    max-width: 700px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
 .hero {
   background-color: getColor(background-main);
 }
@@ -23,6 +35,7 @@
     background-size: 168px 133px, 143px 336px, 324px 322px;
     background-position: left calc(50% + 265px) bottom,
       left calc(50% + 65px) bottom, left calc(50% + 85px) top 35px;
+    padding-top: 15px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -30,11 +43,13 @@
       url('./../images/hero/icecream/icecream-desktop@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 293px 232px, 236px 557px, 538px 538px;
-    background-position: left calc(50% + 420px) bottom,
-      left calc(50% + 100px) bottom, left calc(50% + 130px) top 50px;
+    background-position: left calc(50% + 420px) bottom, left calc(50% + 100px) top 37px, left calc(50% + 120px) top -25px;
+    padding-top: 84px;
   }
 }
-
+.hero-box {
+  height: 100%;
+}
 .header {
   width: 100%;
 }
@@ -53,6 +68,7 @@
 }
 
 .nav-list {
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -96,6 +112,9 @@
   border: none;
   outline: none;
   background-color: getColor(background-main);
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .nav-buttons {
@@ -133,16 +152,12 @@
 }
 
 .upper-line {
+  padding: 0;
   display: flex;
   justify-content: space-between;
 
   @media screen and (min-width: 768px) {
     padding-right: 7px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding-left: 70px;
-    padding-right: 70px;
   }
 }
 
@@ -218,12 +233,15 @@
 }
 
 .places {
+  margin: -30px;
+  height: 100%;
   @media screen and (max-width: 767px) {
     display: none;
   }
 }
 
 .places-item {
+  height: 100%;
   position: relative;
 
   &::before {
@@ -248,10 +266,10 @@
 }
 
 .places-item:not(:last-child) {
-  margin-bottom: 17px;
+  margin-bottom: 23px;
 
   @media screen and (min-width: 1200px) {
-    margin-bottom: 20px;
+    margin-bottom: 35px;
   }
 }
 
@@ -260,6 +278,7 @@
 }
 
 .places-number {
+  margin-bottom: 0;
   position: relative;
   z-index: 5;
 
@@ -279,6 +298,7 @@
 }
 
 .places-text {
+  margin: 0;
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
   font-size: 8px;
@@ -293,6 +313,7 @@
 }
 
 .eco {
+  padding-top: 82px;
   display: flex;
   align-items: flex-end;
 
@@ -317,9 +338,13 @@
   @media screen and (min-width: 768px) {
     display: inline-block;
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 28px;
+  }
 
   @media screen and (min-width: 1200px) {
     margin-right: 30px;
+    margin-bottom: 44px;
   }
 }
 
@@ -354,6 +379,15 @@
   @media screen and (min-width: 1200px) {
     width: 26px;
     height: 26px;
+  }
+}
+
+.eco-content {
+  @media screen and (min-width: 768px) and (min-width: 1199px) {
+    padding-bottom: 34px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 55px;
   }
 }
 
