issues with close button in header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,24 +21,24 @@
                 </svg>
             </button>
 
-            <div class="header-menu-container" id="header-menu-container" data-menu>
-                    <div class="header-menu-wrapper">
-                        <ul class="header-navigation-list list">
-                        <li class="header-navigation-item">
-                            <a class="header-navigation-page link" href="index.html">программы обучения</a>
-                        </li>
-                        <li class="header-navigation-item"">
-                            <a class=" header-navigation-page link" href="#">о нас</a>
-                        </li>
-                        <li class="header-navigation-item"">
-                            <a class=" header-navigation-page link" href="#">варианты обучения</a>
-                        </li>
-                        <li class="header-navigation-item"">
-                            <a class="header-navigation-page link" href="#">контакты</a>
-                        </li>
-                        </ul>
-                        <button class="header-button" type="button" data-modal-open>консультация по телефону</button>
-                    </div>
+            <div class="header-menu-container is-hidden" id="header-menu-container" data-modal>
+                <div class="header-menu-wrapper">
+                    <ul class="header-navigation-list list">
+                    <li class="header-navigation-item">
+                        <a class="header-navigation-page link" href="index.html">программы обучения</a>
+                    </li>
+                    <li class="header-navigation-item"">
+                        <a class=" header-navigation-page link" href="#">о нас</a>
+                    </li>
+                    <li class="header-navigation-item"">
+                        <a class=" header-navigation-page link" href="#">варианты обучения</a>
+                    </li>
+                    <li class="header-navigation-item"">
+                        <a class="header-navigation-page link" href="#">контакты</a>
+                    </li>
+                    </ul>
+                    <button class="header-button" type="button" data-modal-open>консультация по телефону</button>
+                </div>
             </div>
         </nav>
     </div>
