--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -103,6 +103,18 @@
 
       transition: $animation;
     }
+
+    .header-icon-close {
+      display: none;
+    }
+
+    &.is-open .header-icon-close {
+      display: block;
+    }
+
+    &.is-open .header-icon-menu {
+      display: none;
+    }
   }
 
   &-icon {
@@ -113,19 +125,18 @@
     fill: black;
   }
 
-  &-icon-menu {
-    fill: black;
-  }
-
   &-menu-container {
     display: none;
-
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
+
     width: 100vw;
     height: 100vh;
     padding: 108px 20px 0px 20px;
+
+    overflow-y: scroll;
+    z-index: 1;
 
     background-color: rgba(17, 21, 24, 0.9);
 
@@ -136,6 +147,10 @@
       & .header-logo-description {
         color: $white-text-color;
       }
+    }
+
+    &.is-hidden {
+      display: none;
     }
   }
 
@@ -167,6 +182,10 @@
       display: none;
     }
   }
+}
+
+body.modal-open {
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
