дополнительный спан для id

--- a/src/partials/how-we-do-it.html
+++ b/src/partials/how-we-do-it.html
@@ -1,4 +1,5 @@
-<section id="study-options" class="how-we-do-it">
+<section class="how-we-do-it">
+    <span id="study-options"></span>
     <div class="container">
         <h2 class="how-we-do-it__title">Как мы это делаем</h2>
 
