--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -1,6 +1,7 @@
 <!-- Teacher -->
 
-<section id="about-us" class="teacher">
+<section class="teacher">
+    <span id="about-us"></span>
     <div class="container">
         <h2 class="teacher__title">Преподаватель</h2>
         <div class="teacher__block">
