--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,5 @@
 <section class="hero">
+    <span id="header"></span>
     <div class="hero__top">
         <div class="container">
             <div class="hero__body">
