--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,5 +1,6 @@
   <!--Регистрация-->
-  <section id="contacts" class="registration">
+  <section class="registration">
+    <span id="contacts"></span>
      
     <div class="container">
       <h2  class="registration__title">Регистрация на <span class="orange-word" >бесплатную</span> телефонную <span class="orange-word" >консультацию</span> по нюансам ЗНО
