--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,7 @@
 @import './layout/why-us';
 @import './layout/registration';
 @import './layout/footer';
-
+@import './layout/ancors';
 // utils
 @import './utils/container';
 @import './utils/variables';
