--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -6,17 +6,20 @@
     max-width: 700px;
   }
   @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+    max-width: 1185px;
   }
 }
-
-.hero {
-  background-color: getColor(background-main);
-}
-
 .hero-section {
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    padding-top: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 84px;
+  }
+}
+.hero {
   background-repeat: no-repeat;
-
+  background-color: getColor(background-main);
   @media screen and (max-width: 767px) {
     padding-top: 92px;
     padding-bottom: 118px;
@@ -33,9 +36,8 @@
       url('./../images/hero/icecream/icecream-tablet@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 168px 133px, 143px 336px, 324px 322px;
-    background-position: left calc(50% + 265px) bottom,
-      left calc(50% + 65px) bottom, left calc(50% + 85px) top 35px;
-    padding-top: 15px;
+    background-position: left calc(50% + 250px) bottom,
+      left calc(50% + 40px) top 83px, left calc(50% + 50px) top 42px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -43,8 +45,7 @@
       url('./../images/hero/icecream/icecream-desktop@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 293px 232px, 236px 557px, 538px 538px;
-    background-position: left calc(50% + 420px) bottom, left calc(50% + 100px) top 37px, left calc(50% + 120px) top -25px;
-    padding-top: 84px;
+    background-position: left calc(50% + 420px) bottom, left calc(50% + 85px) top 88px, left calc(50% + 120px) top 50px;
   }
 }
 .hero-box {
@@ -202,6 +203,7 @@
 }
 
 .hero-buttons {
+  margin-bottom: 0;
   padding: 0;
   display: flex;
 }
@@ -233,7 +235,8 @@
 }
 
 .places {
-  margin: -30px;
+  margin: 0px;
+  margin-top: -30px;
   height: 100%;
   @media screen and (max-width: 767px) {
     display: none;
@@ -313,10 +316,14 @@
 }
 
 .eco {
-  padding-top: 82px;
   display: flex;
   align-items: flex-end;
-
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 19px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 82px;
+  }
   @media screen and (max-width: 767px) {
     display: none;
   }
